# projA

./: CMakeLists.txt
applications/main/: CMakeLists.txt  main.cpp
cmake/: IncludeProjB.cmake
libraries/corelib/: CMakeLists.txt
libraries/corelib/include/: CoreAPrint.h
libraries/corelib/source/: CoreAPrint.cpp
libraries/utilitylib/: CMakeLists.txt
libraries/utilitylib/include/: .gitignore  AVersion.h.in  UtilAPrint.h
libraries/utilitylib/source/: UtilAPrint.cpp
tests/: CMakeLists.txt
